[gd_scene load_steps=3 format=2]

[ext_resource path="res://exporters/CollisionGenerator.gd" type="Script" id=1]
[ext_resource path="res://exporters/ContourTextureRect.gd" type="Script" id=2]

[node name="CollisionGenerator" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -566.0
margin_bottom = -268.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Naive collision generation"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 800.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ContourTextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 440.0
margin_right = 800.0
margin_bottom = 500.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_top = 13.0
margin_right = 600.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SaveButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 610.0
margin_right = 690.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )
text = "Accept"

[node name="CloseButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 700.0
margin_right = 780.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
